# movici-geo-query

./: .bumpversion.app  .bumpversion.cfg  .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/install-boost/: action.yml
.github/workflows/: deploy.yml  linting.yml  main.yml  testing-c-extension.yml  testing.yml  testing_c_extension.yml
boost_geo_query/: geo_query.py  geometry.py
movici_geo_query/: __init__.py  geo_query.py  geometry.py
src/: CMakeLists.txt  _movici_geo_query.cpp  boost_geo_mapper.cpp  boost_geo_mapper.hpp  boost_geo_query.cpp  boost_geo_query.hpp  cxa_terminate_fix.cpp  interface.cpp  python_geo_query.cpp  python_geo_query.hpp  types.hpp
src/unitTest/: boost_geo_query_test.cpp  python_geo_query_test.cpp  test_main.cpp  unit_test.cpp
tests/: benchmark.py  test_geo_query.py  test_pybind11.py
tests/c/: boost_geo_query_test.cpp  catch.hpp  python_geo_query_test.cpp  test_main.cpp
tests/python/: benchmark.py  test_geo_query.py  test_pybind11.py
