[build-system]
requires = ["scikit-build-core>=0.3.0", "pybind11>=2.10.1,<3.1.0"]
build-backend = "scikit_build_core.build"

[project]
name = "movici-geo-query"
version = "1.4.0"
description = "Geospatial queries powered by Boost Geom"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "Movici Public License" }
authors = [{ name = "NGinfra - Movici", email = "movici@nginfra.nl" }]
maintainers = [{ name = "NGinfra - Movici", email = "movici@nginfra.nl" }]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: Free for non-commercial use",
  "License :: Other/Proprietary License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["geospatial", "rtree", "spatial-index", "boost-geometry", "gis"]

# Core dependencies
dependencies = ["numpy>=1.20.3"]

# Optional dependencies
[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",

  # Code quality
  "pre-commit>=3.0.0",
  "pylint>=2.15.0",
  "safety>=2.0.0",
  "coverage>=7.0.0",
  "taplo",
  "ruff",
]

[project.urls]
Homepage = "https://www.movici.nl/"
Documentation = "https://docs.movici.nl/"
Repository = "https://github.com/nginfra/movici-geo-query/"
"Bug Tracker" = "https://github.com/nginfra/movici-geo-query/issues"

[tool.scikit-build]
cmake.minimum-version = "3.20"
cmake.verbose = true
wheel.packages = ["movici_geo_query"]
cmake.build-type = "Release"          # or "RelWithDebInfo", "Debug", etc.

[tool.setuptools.packages.find]
include = ["movici_geo_query*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
# Ideally we'd have the following rules enabled. However, that is currently not feasible,
# so some of them are still disabled, we should work on enabling and fixing them:

select = [
  # "ARG", # check for unused arguments -- there are too many false positives with overriding methods -> maybe typing.override will help?
  # "B", # (bugbear) catches certain common programming bugs
  # "C4", # comprehension linting
  "E", # common codestyle errors
  "F", # pyflakes rules
  # "FA", # check for correct usage of from __future__ import annotations
  "FURB", # refactor opportunities

  "I", # isort
  # "LOG", # check for logging best practices and bugs
  # "N", # pep8 naming

  "NPY", # numpy checks
  # "PD", # pandas checsk
  "PLE", # pylint errors
  # "PLR", # pylint refactor opportunities
  # "PLW", # pyling warnings
  # "PT", # pytest style checks
  # "PTH", # prefer pathlib over os.path
  # "RSE", # return statement rules
  # "RUF", # ruff specific rules
  "S", # security (bandit) checks
  # "SIM", # suggest code simplifications
  "T10", # check for breakpoint() statements
  "T20", # check for print statements
  "W",   # common codestyle warnings
  "YTT", # check sys.version errors (not used extensively but nice to have)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"tests/python/benchmark.py" = ["T20"] # Allow print statements
"examples/*" = ["S101", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["movici_geo_query"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--tb=short", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
